Example routes for user and cosmetics
