# skin-resque-api/domain/schemas/User.ts
@@ -1,7 +1,6 @@
 import { Schema } from 'mongoose';
 import { USERS } from '../constants.js';
 import { IUser } from '../shared/types.js';
-import CosmeticSchema from './Cosmetics.js';
 import PaletteSchema from './Pallete.js';
 
 const UserSchema = new Schema<IUser>(
@@ -9,7 +8,7 @@ const UserSchema = new Schema<IUser>(
         name: { type: String, required: true },
         email: { type: String, required: true },
         skin_type: String,
-        saved_cosmetics: [{type: Schema.Types.ObjectId, ref: "Cosmetic"}],
+        saved_cosmetics: [{ type: Schema.Types.ObjectId, ref: 'Cosmetic' }],
         saved_palletes: [PaletteSchema],
     },
     { collection: USERS }
