# skin-resque-api/index.ts
@@ -1,11 +1,9 @@
-import express, { Application } from 'express';
+import express, { Application, json, urlencoded } from 'express';
 import * as dotenv from 'dotenv';
-import Dba from './infrastructure/database_abstraction/Dba.js';
-import { Cosmetic } from './domain/models/index.js';
-import { ICosmetics } from "./domain/shared/types.js"
+import DB from './infrastructure/database_abstraction/index.js';
+import users from './routes/users.js';
+import cosmetics from './routes/cosmetics.js';
 dotenv.config();
-
-const DB = new Dba();
 
 const server_params = {
     PORT: process.env.PORT || 3000,
@@ -18,17 +16,13 @@ const DB_DATA = {
 };
 
 const app: Application = express();
+
+app.use(json());
+app.use(urlencoded({ extended: true }));
+app.use('/users', users);
+app.use('/cosmetics', cosmetics);
+
 app.listen(server_params.PORT, async () => {
     console.log(`Server running on port ${server_params.PORT}`);
     await DB.connect(DB_DATA.HOST, DB_DATA.PORT, DB_DATA.NAME);
-    const newCosmetic = new Cosmetic<ICosmetics>({
-        name: "Cosmopolitanian Extraterrestial smoothening paste",
-        description: "Not much",
-        ingredients: []
-    })
-    
-
-    const res = await DB.insert<ICosmetics>(Cosmetic, newCosmetic);
-    console.log(res);
-    
 });
