# skin-resque-api/infrastructure/repository/user/index.ts
@@ -1,0 +1,3 @@
+import { getUserOne } from './getUserOne.js';
+
+export { getUserOne };
